[package]
name = "crossgate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-context = "0.1.3"
bson = { version = "2", features = ["chrono-0_4"] } 
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crossbeam = "0.8"
lazy_static = "1"
mongodb = "2"

# log
log="0.4"
env_logger = "0.9.0"
# base
dotenv = "0.13"
# ..
bytes = "1"

# async-trait="0.1"
num_cpus="0.2"
once_cell="1"

oplog = { git = "https://github.com/laik/oplog-rs.git", branch = "master" }
crossgate-rs = { git = "https://github.com/ddx2x/crossgate-rs.git", branch = "micro" }

# axum-web
tokio-stream = "0.1"
hyper = { version = "0.14", features = ["full"] }
tower-http = { version = "0.3.0", features = ["fs", "trace"] }
axum = {version = "0.5", features = ["headers"]}
headers = "0.3"
hyper-trust-dns = "0.4.2"
async-stream = "0.3"


[dependencies.helper]
path = './src/object/helper'

[dev-dependencies]
tokio-test = "0.4.2"

[[bin]]
name = "api"
path = "src/bin/api/main.rs"

[[bin]]
name = "gateway"
path = "src/bin/gateway/main.rs"

[[bin]]
name = "stream"
path = "src/bin/stream/main.rs"

[[bin]]
name = "oplog"
path = "src/bin/oplog/main.rs"

[profile.release]
opt-level = 'z'
debug = false
# split-debuginfo = '...'  # Platform-specific.
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false