[package]
name = "crossgate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-context = "0.1.3"
bson = { version = "2", features = ["chrono-0_4"] }
futures = "0.3"


typed-builder = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
regex = "1.7.0"
lrpar = "0.13"

chrono = "0.4"

dotenv = "0.15"

async-recursion = "1"

mongodb = "2"

# log
log = "0.4"

anyhow = "1.0.65"
thiserror = "1.0.35"


[dependencies.helper]
path = './src/object/helper'

[dependencies.condition]
path = './condition'

[dev-dependencies]
tokio-test = "0.4.2"

[profile.release]
opt-level = 'z'
debug = false
# split-debuginfo = '...'  # Platform-specific.
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false
