[package]
name = "condition"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]

[dependencies]
cfgrammar = "0.13"
lrlex = "0.13"
lrpar = "0.13"
anyhow = "1"
once_cell = "1"
serde_json = "1"

[build-dependencies]
cfgrammar = "0.13"
lrlex = "0.13"
lrpar = "0.13"
