[package]
name = "parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]

[dependencies]
cfgrammar = "0.12"
lrlex = "0.12"
lrpar = "0.12"
anyhow = "1"
once_cell = "1"

[build-dependencies]
cfgrammar = "0.12"
lrlex = "0.12"
lrpar = "0.12"
