[package]
name = "helper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.18", features = ["full", "extra-traits"] }
proc-macro2 = { version = "1.0.60" }
quote = { version = "1.0.28" }
# struct 
typed-builder = "0.21.0"
mongodb = "3.2.3"

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
trybuild = { version = "1.0.49", features = ["diff"] }
